--- a/atoz.ipynb
+++ b/atoz.ipynb
@@ -291,7 +291,9 @@
     "\n",
     "$$audio[1:]=[a_1,a_2...,a_N]$$\n",
     "\n",
-    "$$audio[:-1]=[a_0,a_1,...,a_{N-1}]$$"
+    "$$audio[:-1]=[a_0,a_1,...,a_{N-1}]$$\n",
+    "\n",
+    "$$audio_{emp}=[audio[0], audio[1:]-0.97*audio[:-1]]$$"
    ]
   },
   {
